applier/build/5pi-home.jsonnet.test-args/monitoring/prometheus/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "prometheus"
  "namespace": "monitoring"
"spec":
  "ports":
  - "port": 9090
  "selector":
    "app": "prometheus"
