applier/build/5pi-home.jsonnet.test-args/monitoring/prometheus/ingress.yaml
"apiVersion": "extensions/v1beta1"
"kind": "Ingress"
"metadata":
  "name": "prometheus"
  "namespace": "monitoring"
"spec":
  "rules":
  - "host": "prometheus.d.42o.de"
    "http":
      "paths":
      - "backend":
          "serviceName": "prometheus"
          "servicePort": 9090
        "path": "/"
